--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,8 +11,10 @@ build:
     python: "3.11"
 
 # Build documentation in the "docs/" directory with Sphinx
+# force fail instead of building with warnings
 sphinx:
    configuration: docs/conf.py
+   fail_on_warning: true
 
 # Optionally, but recommended,
 # declare the Python requirements required to build your documentation
@@ -20,6 +22,8 @@ sphinx:
 python:
   install:
     - requirements: docs/requirements.txt
-        
+    # Install our python package before building the docs
+    - method: pip
+      path: .
 
 
