--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,2 +1,14 @@
+numpy>=1.26.4
+pandas>=2.2.2
+seaborn>=0.13.2
+matplotlib>=3.9.0
+plotly>=5.22.0
+statsmodels>=0.14.2
+scipy>=1.13.1
+scikit-learn>=1.5.0
+distfit>=1.8.0
+tqdm>=4.66.4
+sphinx>=8.1.3
+packaging>=24.1
 sphinx==8.1.3
 sphinx_rtd_theme==3.0.2
