--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
   {name = 'Amr Muhammad YT/@AmMoPy'},
 ]
 license = {file = "LICENSE.txt"}
-requires-python = '>=3.11'
+requires-python = '>=3.9'
 dependencies = [
     "numpy>=1.26.4",
     "pandas>=2.2.2",
@@ -22,7 +22,7 @@ dependencies = [
     "scikit-learn>=1.5.0",
     "distfit>=1.8.0",
     "tqdm>=4.66.4",
-    "sphinx>=8.1.3",
+    "ipython>=8.12.3",
     "packaging>=24.1",
 ]
 classifiers = [
@@ -31,7 +31,9 @@ classifiers = [
     "Intended Audience :: End Users/Desktop",
     'License :: OSI Approved :: MIT License',
     "Operating System :: OS Independent",
-    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     "Topic :: Scientific/Engineering",
     "Topic :: Utilities",
@@ -54,7 +56,7 @@ repository = 'https://github.com/AmMoPy/zaps'
 documentation = 'https://zaps.readthedocs.io/'
 
 [project.optional-dependencies]
-test = ['pytest>=8.3.3', "twine>=5.1.1"]
+test = ['pytest>=8.3.3', "twine>=5.1.1", "sphinx>=8.1.3", "sphinx_rtd_theme"]
 
 [tool.setuptools]
 packages = ["zaps", "zaps.eda", "zaps.tests", "zaps.tests.plotting"]
